--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "leaflet": "^1.2.0",
     "moment": "^2.18.1",
     "postcss-cli": "^2.6.0",
+    "promise-polyfill": "6.0.2",
     "prop-types": "^15.5.10",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-leaflet": "^1.6.6",
-    "react-modal": "^2.3.2"
+    "react-modal": "^2.3.2",
+    "whatwg-fetch": "^2.0.3"
   },
   "devDependencies": {
     "babel": "^6.23.0",
